2008-10-25:  Added Limited Use Code Integration to Rx (Jay)
2008-10-20 : Added ability to delete/undelete eDocs and filter display of eDocs (Randy,2032846)
2008-10-09 : Added Photo as an option in DMS, don't use update-2008-10-09.sql if you already have this option in your drop downi list. (Dan Brow)
2008-10-07 : Increased billing unit field size to 6 characters to accommadate percentage billing. (Dan Brow)
2008-09-26 : fix link to encounter in myOSCAR and added code to insert myOSCAR message into encounter note (Randy)
2008-09-25 : new provider service reports export (Ted)
2008-09-23 : ability to bulk export activity reports to csv (Ted)
2008-09-22 : When editing appointment only grab status from db if page is loading for first time else grab it from request (Randy)
2008-09-16 : add/edit appointment page, change input field for status to dropdown list box (Toby)
2008-09-12 : Caisi Integrator has the ability to manage which demographics are linked together. (Ted)
2008-09-11 : Fixed error when correcting invoices duplicate codes can be created for ON billing (Randy,2105933)
2008-09-09 : Fixed bug with Report By Template with dates in Firefox 3 and Safari which only the bottom date param would work (Jay,2102612)
             Fixed bug with Clinic Admin page that would log the user out if they clicked on the page (Jay,2102572)
2008-09-07 : Added practitioner number field in provider settings. Added Practitioner number to signature of Rx pad. (Dan)
2008-09-06 : Changed current prescription description in consultation from the short version to the long version. (Jay,2097084)
2008-09-05 : Caisi Integrator now shares prevention data across facilities (Ted)
2008-09-03 : Add copy favorite prescriptions function (Toby)
2008-09-02 : Changed icd10 table to be supported by desease registry
2008-09-02 : Added support for adding caisi issues set as 'major' to desease registry
2008-08-27 : Added newsletter option to demographic (Randy)